# python-project-lvl3

./: Makefile  README.md  name_test.py  pyproject.toml  test.py
.github/workflows/: my_linter.yml
page_loader/: __init__.py  args.py  data_from_url.py  loader.py  name_formation.py  page.py  parser.py  style.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: index.html  index_result.html
