[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["LikerK <nagorniykirill@gmail.com>"]
packages = [
    { include = 'page_loader'},
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
argparse = "^1.4.0"
pytest = "^6.2.5"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
